@@ -203,6 +203,8 @@ class TorqueJobRunner(object):
         
         # This script was generated by Civet Version $CIVET_VERSION
         
+        $PBS_DIRECTIVES
+        
         #define civet shell functions
         source $FUNCTIONS
         
@@ -513,9 +515,10 @@ class TorqueJobRunner(object):
         """  
         tokens = {}
         
+        tokens['PBS_DIRECTIVES'] = self._generate_directives(batch_job)
+        
         tokens['CMD'] = batch_job.cmd
         
-
         if self.execution_log_dir:
             tokens['LOG_DIR'] = self.execution_log_dir
         else:
@@ -595,7 +598,25 @@ class TorqueJobRunner(object):
         
         return env
 
+    def _generate_directives(self, batch_job):
+        """
+            Generate #PBS directives to insert into batch script to facilitate
+            rerunning individual scripts by hand (during development)
+            as well as documenting the resources requested when the job was
+            submitted
+        """
+        directives = []
         
+        directives.append("#PBS -l walltime={0}".format(batch_job.walltime))
+        directives.append("#PBS -l nodes={0}:{1}".format(batch_job.nodes, batch_job.ppn))
+        
+        if batch_job.mem:
+            directives.append("#PBS -l mem={0}".format(batch_job.mem))
+            
+        if batch_job.name:
+            directives.append("#PBS -N {0}".format(batch_job.name))
+        
+        return '\n'.join(directives)
    
     def _dependency_string(self, batch_job):
         """
